DuPont DevSB/src/objects/Entitlement__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom Setting is used by BI NA Warranty and Claim project</description>
    <fields>
        <fullName>Accessories__c</fullName>
        <label>Accessories</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Type__c</fullName>
        <label>Building Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WRB_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WRB Only</label>
        <type>Checkbox</type>
    </fields>
    <label>BI NA Envelopes Products</label>
</CustomObject>